.deploy/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: grantr
  labels:
    name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      run: redis
  template:
    metadata:
      labels:
        run: redis
    spec:
      containers:
        - name: redis
          image: "redislabs/redisearch:latest"
          ports:
            - containerPort: 6379
              name: "swarm"
              protocol: "TCP"
          command:
            - redis-server
            - "/redis-master/redis.conf"
          resources: {}
          volumeMounts:
            - name: redis-mount
              mountPath: /data
            - mountPath: /redis-master
              name: config
      nodeName: v3x-poseidon
      volumes:
        - name: redis-mount
          persistentVolumeClaim:
            claimName: redis-storage
        - name: config
          configMap:
            name: redis-config
            items:
            - key: redis-config
              path: redis.conf
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: grantr
spec:
  selector:
    run: redis
  ports:
  - port: 6379
    targetPort: 6379
